--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bitcore-lib-dash",
+  "name": "bitcore-lib-terracoin",
   "version": "0.15.2",
-  "description": "A pure and powerful JavaScript Dash library.",
+  "description": "A pure and powerful JavaScript Terracoin library.",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
   "scripts": {
@@ -69,7 +69,7 @@
     }
   ],
   "keywords": [
-    "dash",
+    "terracoin",
     "transaction",
     "address",
     "p2p",
@@ -86,12 +86,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/bitcore-lib-dash.git"
+    "url": "https://github.com/TheSin-/bitcore-lib-terracoin.git"
   },
   "bugs": {
-    "url": "https://github.com/dashevo/bitcore-lib-dash/issues"
+    "url": "https://github.com/TheSin-/bitcore-lib-terracoin/issues"
   },
-  "homepage": "https://github.com/dashevo/bitcore-lib-dash",
+  "homepage": "https://github.com/TheSin-/bitcore-lib-terracoin",
   "browser": {
     "request": "browser-request"
   },
@@ -102,11 +102,10 @@
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
     "lodash": "=4.17.1",
-    "sha512": "=0.0.1",
-    "x11-hash-js": "^1.0.0"
+    "sha512": "=0.0.1"
   },
   "devDependencies": {
-    "bitcore-build-dash": "dashevo/bitcore-build-dash",
+    "bitcore-build-terracoin": "TheSin-/bitcore-build-terracoin",
     "browserify": "latest",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
